Mise à jour du 22_02_2021

--- a/index.html
+++ b/index.html
@@ -173,22 +173,22 @@
                         <h2> <strong>Afficher plus</strong></h2>
                     </div>
                 </div>
-                <div class="sec_heb_74_D_b_p"><!--bloc_Section_Hebergement_Ligne_74_Deuxième_Unité_Bloc_plus_populaires-->
-                    <div class="po1">
-                        <div class="p1">
+                <div class="sec_heb_176_D_b_p"><!--bloc_Section_Hebergement_Ligne_74_Deuxième_Unité_Bloc_plus_populaires-->
+                    <div class="sec_heb_177_D_b_p">
+                        <div class="sec_heb_178_D_b_p">
                             <strong>plus populaires</strong>
                         </div>
-                        <div class="p11">
+                        <div class="sec_heb_181_D_b_p">
                             <i class="fas fa-chart-line" style="color:black; font-size:17px"></i>
                         </div>
                     </div>
-                    <div class="po2">
-                        <div class="p2">
+                    <div class="sec_heb_185_D_b_p">
+                        <div class="sec_heb_186_D_b_p">
                             <a href="Projet_2_Reservia/images/hebergements/4_small/hebergement.jpg">
                             <img src="Projet_2_Reservia/images/hebergements/4_small/hebergement.jpg"
                             alt=" Photo Hebergement" title="Cliquez pour agrandir"/></a>       
                         </div>
-                        <div class="p22">
+                        <div class="sec_heb_191_D_b_p">
                             <h1><strong><a href="#" title="Visiter le lieu">Hotel Le soleil du matin</a></strong></h1>
                             <h2>nuit à partir de 128€</h2><br/>
                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -198,13 +198,13 @@
                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                         </div>
                     </div>
-                    <div class="po3">
-                        <div class="p3">
+                    <div class="sec_heb_201_D_b_p">
+                        <div class="sec_heb_202_D_b_p">
                             <a href="Projet_2_Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg">
                             <img src="Projet_2_Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
                             alt=" Photo aw-creative-VGs8z60yT2c-unsplash " title="Cliquez pour agrandir"/></a>
                         </div>
-                        <div class="p33">
+                        <div class="sec_heb_207_D_b_p">
                             <h1><strong><a href="#" title="Visiter le lieu">Au coeur de l'eau Chambre d'hôtes</a></strong></h1> 
                             <h2>nuit à partir de 71€</h2><br/>
                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -214,13 +214,13 @@
                             <i class="fas fa-star" style="color:grey; font-size:10px"></i>
                         </div>
                     </div>
-                    <div class="po4">
-                        <div class="p4">
+                    <div class="sec_heb_217_D_b_p">
+                        <div class="sec_heb_218_D_b_p">
                             <a href="Projet_2_Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
                             <img src="Projet_2_Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
                             alt="  Photo febrian-zakaria-sjvU0THccQA-unsplash" title="Cliquez pour agrandir" /></a>       
                         </div>
-                        <div class="p44">
+                        <div class="sec_heb_223_D_b_p">
                             <h1><strong><a href="#" title="Visiter le lieu">Hôtel tout bleu et blanc</a></strong></h1>
                             <h2>nuit à partir de 78€</h2><br/>
                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -232,71 +232,71 @@
                     </div>
                 </div> 
             </section><br/>
-            <section class="sec2 sec_235_T"><!--bloc_Section_Ligne_26_Troisième_Unité-->
-                <div id="ate" class="b_se1">
+            <section class="sec_235_T"><!--bloc_Section_Ligne_235_Troisième_Unité-->
+                <div id="ate" class="sec_236_T">
                     <strong>Activites à Marseille</strong>
                 </div><br/>
-                <div class="b_ele">
-                    <div class="b_el1">
-                        <div class="b_el11">
+                <div class="sec_239_T">
+                    <div class="sec_240_T">
+                        <div class="sec_241_T">
                             <a href="Projet_2_Reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
                             <img src="Projet_2_Reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                             alt="  Photo reno-laithienne-QUgJhdY5Fyk-unsplash" title="Cliquez pour agrandir" /></a>    
                         </div>
-                        <div class="b_el111">
+                        <div class="sec_246_T">
                             <h2><a href="#" title="Visiter le lieu">Vieux port</a></h2>
                         </div>
                     </div>
-                    <div class="b_el2">
-                        <div class="b_e2">
-                            <div class="b_e22">
+                    <div class="sec_250_T">
+                        <div class="sec_251_T">
+                            <div class="sec_252_T">
                                 <a href="Projet_2_Reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg">
                                 <img src="Projet_2_Reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" 
                                 alt="  Photo paul-hermann-QFTrLdQIRhI-unsplash" title="Cliquez pour agrandir" /></a>      
                             </div>
-                            <div class="b_e222">
+                            <div class="sec_257_T">
                                 <h2><strong><a href="#" title="Visiter le lieu">Fort de Pomègues</a></strong></h2>
                             </div>
                         </div>
-                        <div class="b_2">
-                            <div class="b_22">
+                        <div class="sec_261_T">
+                            <div class="sec_262_T">
                                 <a href="Projet_2_Reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg">
                                 <img src="Projet_2_Reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" 
                                 alt="  Photo kevin-hikari-rV_Qd1l-VXg-unsplash"  title="Cliquez pour agrandir"/></a>
                             </div>
-                            <div class="b_222">
+                            <div class="sec_267_T">
                                 <h2><strong><a href="#" title="Visiter le lieu">Îles du Frioul</a></strong></h2>
                             </div>
                         </div>
                     </div>
-                    <div class="b_el3">
-                        <div class="b_el33">
+                    <div class="sec_272_T">
+                        <div class="sec_273_T">
                             <a href="Projet_2_Reservia/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
                             <img src="Projet_2_Reservia/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" 
                             alt="  Photo kilyan-sockalingum-NR8-cBCN3aI-unsplash" title="Cliquez pour agrandir"/></a>       
                         </div>
-                        <div class="b_el333">
+                        <div class="sec_278_T">
                             <h2><strong><a href="#" title="Visiter le lieu">Parc national des Calanques</a></strong></h2>
                         </div>
                     </div>
-                    <div class="b_el4">
-                        <div class="b_e4">
-                            <div class="b_e44">
+                    <div class="sec_282_T">
+                        <div class="sec_283_T">
+                            <div class="sec_284_T">
                                 <a href="Projet_2_Reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg">
                                 <img src="Projet_2_Reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" 
                                 alt="  Photo florian-wehde-xW9e8gdotxI-unsplash" title="Cliquez pour agrandir"/></a> 
                             </div>
-                            <div class="b_e444">
+                            <div class="sec_289_T">
                                 <h2><strong><a href="#" title="Visiter le lieu">Notre-Dame-de-la-Garde</a></strong></h2>
                             </div>
                         </div>
-                        <div class="b_4">
-                            <div class="b_44">
+                        <div class="sec_293_T">
+                            <div class="sec_294_T">
                                 <a href="Projet_2_Reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg">
                                 <img src="Projet_2_Reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
                                 alt="  Photo lena-paulin-wH2-EJoDcV0-unsplash" title="Cliquez pour agrandir" /></a>    
                             </div>
-                            <div class="b_444">
+                            <div class="sec_299_T">
                                 <h2><strong><a href="#" title="Visiter le lieu">Parc Longchamp</a></strong></h2>
                             </div>
                         </div>
@@ -304,20 +304,20 @@
                 </div>
             </section><br/>
         </div>
-        <div class="bloc_footer">
+        <div class="bloc_footer_307">
             <footer>
-                <div class="bf_1">
+                <div class="bf_309">
                     <strong>A propos</strong><br/>
                     <a href="#" title="Cliqluez ici pour les détailles de fonctinnement">Fonctonnement du site</a>
                     <a href="#" title="Voir les conditions générales">Condition generale de vente</a>
                     <a href="#" title="A propos de données et confidentialité">Données et confidentialité</a>
                 </div>
-                <div class="bf_2">
+                <div class="bf_315">
                     <strong>Nos hébergements</strong><br/>
                     <a href="#" title="Voir la charte qualité">Charte qualité</a>
                     <a href="#" title="Proposez votre Hôtel">Soumettre votre hôtel</a>
                 </div>
-                <div class="bf_3">
+                <div class="bf_320">
                     <strong>Assistance</strong><br/>
                     <a href="#" title="Consultez notre centre d'aide">Centre d'aide</a>
                     <a href="#" title="Nos moyens de contact">Nous contacter</a>
