Mise à jour du 24_02_2021_2

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
+        <meta name="Description" CONTENT="Agence de voyage Reservia">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <link rel="stylesheet" href="Style.css">
@@ -62,14 +63,14 @@
                     </div>
                     <div class="sec_63_P_I_P"><!--bloc_Section_Ligne_63_Prémière_Unité_Icône_Paragraphe-->
                         <div class="sec_64_P_I_P"><i class="fas fa-info" style="color:blue; font-size:10px"></i></div>
-                        <div class="sec_65_P_I_P">plus de 500 logements sont disponibles dans cette ville</div>   
+                        <div class="sec_65_P_I_P">Plus de 500 logements sont disponibles dans cette ville</div>   
                     </div>
                 </div>
             </section><br/>
             <section class="sec_69_D"><!--bloc_Section_Ligne_69_Deuxième_Unité-->
                 <div id="hbg" class="sec_heb_70_D"><!--bloc_Section_Hebergement_Ligne_70_Deuxième_Unité-->
                     <div class="sec_heb_71_D">
-                        <strong>Heberegement à Marseille</strong>
+                        <strong>Hebergements à Marseille</strong>
                     </div><br/>
                     <div class="sec_heb_74_D_b_img"><!--bloc_Section_Hebergement_Ligne_74_Deuxième_Unité_Bloc_Image-->
                         <div class="sec_heb_75">
@@ -176,7 +177,7 @@
                 <div class="sec_heb_176_D_b_p"><!--bloc_Section_Hebergement_Ligne_74_Deuxième_Unité_Bloc_plus_populaires-->
                     <div class="sec_heb_177_D_b_p">
                         <div class="sec_heb_178_D_b_p">
-                            <strong>plus populaires</strong>
+                            <strong>Les plus populaires</strong>
                         </div>
                         <div class="sec_heb_181_D_b_p">
                             <i class="fas fa-chart-line" style="color:black; font-size:17px"></i>
